--- a/doc/需要完整口述的一些技术点.md
+++ b/doc/需要完整口述的一些技术点.md
@@ -3,3 +3,11 @@
 
 ## 2.闭包
   - once函数（writeSomething.js）就是闭包的经典应用(还有memoize)
+## 3.谈谈对this的理解
+  - https://github.com/BigSharkLx/front-end-interview/blob/main/5%20offer%E6%94%B6%E5%89%B2%E6%9C%BA%E4%B9%8BJavaScript%E7%AF%87.md#1-%E5%AF%B9this%E5%AF%B9%E8%B1%A1%E7%9A%84%E7%90%86%E8%A7%A3
+## 4.谈谈对promise的理解
+  - https://github.com/BigSharkLx/front-end-interview/blob/main/5%20offer%E6%94%B6%E5%89%B2%E6%9C%BA%E4%B9%8BJavaScript%E7%AF%87.md#1-%E5%AF%B9this%E5%AF%B9%E8%B1%A1%E7%9A%84%E7%90%86%E8%A7%A3
+## 5.style-loader css-loader sass-loader执行顺序和执行原理
+  - 直接执行style-loader了就不会再走css-loader了（然而style-loader里定义了pitch（在pitch里import了css-loader）所以不用单独写css-loader），那么为什么还能先执行出css-loader的结果，是因为在style-loader的pitch里import了css-loader去解析css文件，然后通过递归遍历使用css-loader去处理css文件并得到结果
+  - webpack loader执行的规则，如果定义了pitch则从左到右执行pitch并且会把pitch的返回值作为模块的返回值返回，并且在此loader后的loader都不会再执行了，如果没有定义pitch则执行normal（从右到左）
+  - picth使用场景主要解决多个loader执行，下一个loader依赖于上一个loader js解析出来的结果，可以使用pitch去做引入导入
