feat: 口述对象的创建和继承

--- a/doc/需要完整口述的一些技术点.md
+++ b/doc/需要完整口述的一些技术点.md
@@ -11,3 +11,6 @@
   - 直接执行style-loader了就不会再走css-loader了（然而style-loader里定义了pitch（在pitch里import了css-loader）所以不用单独写css-loader），那么为什么还能先执行出css-loader的结果，是因为在style-loader的pitch里import了css-loader去解析css文件，然后通过递归遍历使用css-loader去处理css文件并得到结果
   - webpack loader执行的规则，如果定义了pitch则从左到右执行pitch并且会把pitch的返回值作为模块的返回值返回，并且在此loader后的loader都不会再执行了，如果没有定义pitch则执行normal（从右到左）
   - picth使用场景主要解决多个loader执行，下一个loader依赖于上一个loader js解析出来的结果，可以使用pitch去做引入导入
+
+## 6.对象的创建和继承 - 各个方法的优点缺点
+  - https://github.com/BigSharkLx/front-end-interview/blob/main/5%20offer%E6%94%B6%E5%89%B2%E6%9C%BA%E4%B9%8BJavaScript%E7%AF%87.md#%E5%85%AB%E9%9D%A2%E5%90%91%E5%AF%B9%E8%B1%A1
