--- a/doc/需要完整口述的一些技术点.md
+++ b/doc/需要完整口述的一些技术点.md
@@ -14,3 +14,6 @@
 
 ## 6.对象的创建和继承 - 各个方法的优点缺点
   - https://github.com/BigSharkLx/front-end-interview/blob/main/5%20offer%E6%94%B6%E5%89%B2%E6%9C%BA%E4%B9%8BJavaScript%E7%AF%87.md#%E5%85%AB%E9%9D%A2%E5%90%91%E5%AF%B9%E8%B1%A1
+
+## 7.http2.0和http1.0的区别
+  - https://github.com/BigSharkLx/front-end-interview/blob/main/8%20offer%E6%94%B6%E5%89%B2%E6%9C%BA%E4%B9%8B%E8%AE%A1%E7%AE%97%E6%9C%BA%E7%BD%91%E7%BB%9C%E7%AF%87.md#8-http-11-%E5%92%8C-http-20-%E7%9A%84%E5%8C%BA%E5%88%AB
